# adk-multi-agent

./: .gitignore  README.md  install.py  pyproject.toml  requirements.txt  uv_setup.sh
backend/: app.py
backend/models/: __init__.py  agent.py  base.py  conversation.py  message.py  session.py  task.py
backend/routes/: agent.py  conversation.py  schemas.py  session.py
backend/services/: __init__.py  agent_service.py  llm_service.py
backend/services/agent/: __init__.py  base.py  host_agent.py  remote_agent_connection.py
backend/services/llm/: __init__.py  base.py  openai_provider.py
backend/utils/: __init__.py  config.py  database.py
config/: agent_config.yaml  config.yaml  frontend_config.yaml  llm_config.yaml
frontend/: app.py
frontend/pages/: agents.py  conversation.py  home.py  settings.py
frontend/services/: api_client.py
frontend/styles/: main.css
frontend/utils/: async_utils.py  config_loader.py
multi_tool_agent/: agent.py  pyproject.toml
multiagent/: main.ipynb  main.py  multi_agent_demo.ipynb  multi_agent_demo222222.ipynb  pyproject.toml
multiagent/.ipynb_checkpoints/: main-checkpoint.ipynb
